[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/IntegerLineEdit.gd" type="Script" id=1]
[ext_resource path="res://Scripts/UI/SettingsPage.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=4]

[node name="SettingsPage" type="VBoxContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.5
margin_top = -81.0
margin_right = 182.5
margin_bottom = 81.0
custom_constants/separation = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="HBoxContainer" parent="."]
margin_right = 365.0
margin_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="Username"]
margin_left = 54.0
margin_top = 2.0
margin_right = 157.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username: "

[node name="LineEdit" type="LineEdit" parent="Username"]
margin_left = 161.0
margin_right = 311.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )

[node name="NumDraft" type="HBoxContainer" parent="."]
margin_top = 34.0
margin_right = 365.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="NumDraft"]
margin_top = 2.0
margin_right = 265.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Number of Players in Draft: "

[node name="LineEdit" type="LineEdit" parent="NumDraft"]
margin_left = 269.0
margin_right = 327.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Anims" type="HBoxContainer" parent="."]
margin_top = 68.0
margin_right = 365.0
margin_bottom = 92.0
alignment = 1

[node name="Label" type="Label" parent="Anims"]
margin_left = 90.0
margin_top = 2.0
margin_right = 246.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play Animations: "
valign = 1

[node name="CheckBox" type="CheckBox" parent="Anims"]
margin_left = 250.0
margin_right = 274.0
margin_bottom = 24.0

[node name="Shaders" type="HBoxContainer" parent="."]
margin_top = 102.0
margin_right = 365.0
margin_bottom = 127.0
alignment = 1

[node name="Label" type="Label" parent="Shaders"]
margin_top = 3.0
margin_right = 76.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shader: "

[node name="SelectShaderButton" type="Button" parent="Shaders"]
margin_left = 80.0
margin_right = 218.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Select Shader"

[node name="Control" type="Control" parent="Shaders"]
margin_left = 222.0
margin_right = 222.0
margin_bottom = 25.0

[node name="Control2" type="Control" parent="Shaders"]
margin_left = 226.0
margin_right = 226.0
margin_bottom = 25.0

[node name="Control3" type="Control" parent="Shaders"]
margin_left = 230.0
margin_right = 230.0
margin_bottom = 25.0

[node name="Control4" type="Control" parent="Shaders"]
margin_left = 234.0
margin_right = 234.0
margin_bottom = 25.0

[node name="Control5" type="Control" parent="Shaders"]
margin_left = 238.0
margin_right = 238.0
margin_bottom = 25.0

[node name="ShaderFolderButton" type="Button" parent="Shaders"]
margin_left = 242.0
margin_right = 365.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "Open Folder"

[node name="BackButton" type="Button" parent="."]
margin_top = 137.0
margin_right = 365.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="FileDisplay" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseDisable" type="ColorRect" parent="FileDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -1024.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 0.313726, 0.0509804, 0.698039, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="FileDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -50.0
margin_right = -14.0
margin_bottom = 3.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="VBoxContainer" parent="FileDisplay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -65.0
margin_right = 120.0
margin_bottom = 25.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FileDisplay/ButtonHolder"]
margin_top = 19.0
margin_right = 280.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="BackButton" type="Button" parent="FileDisplay/ButtonHolder"]
margin_top = 46.0
margin_right = 280.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 3 )
text = "Back"

[connection signal="text_changed" from="NumDraft/LineEdit" to="NumDraft/LineEdit" method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="Anims/CheckBox" to="." method="setPlayAnims"]
[connection signal="pressed" from="Shaders/SelectShaderButton" to="." method="shaderButtonPressed"]
[connection signal="pressed" from="Shaders/ShaderFolderButton" to="." method="openShaderFolder"]
[connection signal="pressed" from="BackButton" to="." method="onBackPressed"]
[connection signal="pressed" from="FileDisplay/ButtonHolder/BackButton" to="." method="onShaderBackButtonPressed"]
